--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -94,7 +94,7 @@
         "#SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "#SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
-        "SDZ_Args = \"--share --api --xformers --no-hashing --theme=dark --cloudflared --no-half --disable-nan-check --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
+        "SDZ_Args = \"--share --api --enable-insecure-extension-access --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
         "SDZ_Extensions = True\n",
         "SDZ_ControlNet = True\n",
         "SDZ_Big_Models = True\n",
@@ -273,7 +273,7 @@
         "\n",
         "  elif SDZ_Download_Model == \"VXL1.0\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/WNCawM\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/mt4XSp\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
+        "    #!apt-get install -qq -y aria2 && url=\"https://acortar.link/mt4XSp\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
@@ -862,7 +862,6 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
