--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -101,7 +101,7 @@
         "SDZ_Upscalers = True\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
-        "SDZ_Continue = True #@param {type:\"boolean\"}\n",
+        "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
@@ -483,134 +483,10 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "uuO3yppYql6i",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bcf41700-5ee7-4f54-9517-b710bb51bf1b"
+        "id": "uuO3yppYql6i"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1;90m\n",
-            "\u001b[1;96mInstalling SDZ ✓\n",
-            "\u001b[1;96mPreparing SDZ Continue ✓\n",
-            "\u001b[1;90mPreparing SDZ System ✓\n",
-            "Python 3.10.12 (main, Jun 11 2023, 05:26:28) [GCC 11.4.0]\n",
-            "Version: v1.5.1\n",
-            "Commit hash: 68f336bd994bed5442ad95bad6b6ad5564a5409a\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "Launching Web UI with arguments: --share --api --enable-insecure-extension-access --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\n",
-            "Tag Autocomplete: Could not locate model-keyword extension, Lora trigger word completion will be limited to those added through the extra networks menu.\n",
-            "2023-08-17 02:33:25,418 - ControlNet - \u001b[0;32mINFO\u001b[0m - ControlNet v1.1.238\n",
-            "ControlNet preprocessor location: /content/SDZ/extensions/controlnet/annotator/downloads\n",
-            "2023-08-17 02:33:25,583 - ControlNet - \u001b[0;32mINFO\u001b[0m - ControlNet v1.1.238\n",
-            "sd-webui-prompt-all-in-one background API service started successfully.\n",
-            "cloudflared detected, trying to connect...\n",
-            "Loading weights [None] from /content/SDZ/models/Stable-diffusion/clarity_3.safetensors\n",
-            "Creating model from config: /content/SDZ/configs/v1-inference.yaml\n",
-            "LatentDiffusion: Running in eps-prediction mode\n",
-            "Running on local URL:  http://127.0.0.1:7860\n",
-            "DiffusionWrapper has 859.52 M params.\n",
-            "Running on public URL: https://6278471eb7bbd6271a.gradio.live\n",
-            "Public WebUI Colab URL: https://encountered-furnished-yen-structured.trycloudflare.com\n",
-            "Startup time: 41.1s (launcher: 7.6s, import torch: 13.2s, import gradio: 1.6s, setup paths: 2.2s, other imports: 1.6s, setup codeformer: 0.2s, list SD models: 0.3s, load scripts: 2.9s, create ui: 4.6s, gradio launch: 6.4s, add APIs: 0.3s).\n",
-            "Applying attention optimization: xformers... done.\n",
-            "Model loaded in 20.3s (load weights from disk: 4.1s, create model: 3.8s, apply weights to model: 11.6s, calculate empty prompt: 0.5s).\n",
-            "*** Error running process: /content/SDZ/extensions/controlnet/scripts/controlnet.py\n",
-            "    Traceback (most recent call last):\n",
-            "      File \"/content/SDZ/modules/scripts.py\", line 519, in process\n",
-            "        script.process(p, *script_args)\n",
-            "      File \"/content/SDZ/extensions/controlnet/scripts/controlnet.py\", line 753, in process\n",
-            "        model_net = Script.load_control_model(p, unet, unit.model, unit.low_vram)\n",
-            "      File \"/content/SDZ/extensions/controlnet/scripts/controlnet.py\", line 306, in load_control_model\n",
-            "        model_net = Script.build_control_model(p, unet, model, lowvram)\n",
-            "      File \"/content/SDZ/extensions/controlnet/scripts/controlnet.py\", line 316, in build_control_model\n",
-            "        raise RuntimeError(f\"You have not selected any ControlNet Model.\")\n",
-            "    RuntimeError: You have not selected any ControlNet Model.\n",
-            "\n",
-            "---\n",
-            "  0% 0/20 [00:00<?, ?it/s]\n",
-            "  5% 1/20 [00:03<01:02,  3.27s/it]\n",
-            " 15% 3/20 [00:03<00:14,  1.19it/s]\n",
-            " 25% 5/20 [00:03<00:06,  2.42it/s]\n",
-            " 30% 6/20 [00:03<00:04,  3.11it/s]\n",
-            " 35% 7/20 [00:04<00:03,  3.79it/s]\n",
-            " 40% 8/20 [00:04<00:02,  4.38it/s]\n",
-            " 45% 9/20 [00:04<00:02,  4.91it/s]\n",
-            " 50% 10/20 [00:04<00:01,  5.40it/s]\n",
-            " 55% 11/20 [00:04<00:01,  5.79it/s]\n",
-            " 60% 12/20 [00:04<00:01,  6.09it/s]\n",
-            " 65% 13/20 [00:05<00:01,  6.30it/s]\n",
-            " 70% 14/20 [00:05<00:00,  6.46it/s]\n",
-            " 75% 15/20 [00:05<00:00,  6.59it/s]\n",
-            " 80% 16/20 [00:05<00:00,  6.66it/s]\n",
-            " 85% 17/20 [00:05<00:00,  6.72it/s]\n",
-            " 90% 18/20 [00:05<00:00,  6.71it/s]\n",
-            " 95% 19/20 [00:05<00:00,  6.50it/s]\n",
-            "100% 20/20 [00:06<00:00,  3.27it/s]\n",
-            "2023-08-17 02:34:32,853 - ControlNet - \u001b[0;32mINFO\u001b[0m - Preview Resolution = 512\n",
-            "Downloading: \"https://huggingface.co/yzd-v/DWPose/resolve/main/yolox_l.onnx\" to /content/SDZ/extensions/controlnet/annotator/downloads/openpose/yolox_l.onnx\n",
-            "\n",
-            " 37% 75.8M/207M [00:01<00:02, 47.9MB/s]\n",
-            "Total progress: 100% 20/20 [00:10<00:00,  1.94it/s]\n",
-            "100% 207M/207M [00:04<00:00, 51.1MB/s]\n",
-            "Downloading: \"https://huggingface.co/yzd-v/DWPose/resolve/main/dw-ll_ucoco_384.onnx\" to /content/SDZ/extensions/controlnet/annotator/downloads/openpose/dw-ll_ucoco_384.onnx\n",
-            "\n",
-            "100% 128M/128M [00:03<00:00, 43.5MB/s]\n",
-            "*** Error running process: /content/SDZ/extensions/controlnet/scripts/controlnet.py\n",
-            "    Traceback (most recent call last):\n",
-            "      File \"/content/SDZ/modules/scripts.py\", line 519, in process\n",
-            "        script.process(p, *script_args)\n",
-            "      File \"/content/SDZ/extensions/controlnet/scripts/controlnet.py\", line 753, in process\n",
-            "        model_net = Script.load_control_model(p, unet, unit.model, unit.low_vram)\n",
-            "      File \"/content/SDZ/extensions/controlnet/scripts/controlnet.py\", line 306, in load_control_model\n",
-            "        model_net = Script.build_control_model(p, unet, model, lowvram)\n",
-            "      File \"/content/SDZ/extensions/controlnet/scripts/controlnet.py\", line 316, in build_control_model\n",
-            "        raise RuntimeError(f\"You have not selected any ControlNet Model.\")\n",
-            "    RuntimeError: You have not selected any ControlNet Model.\n",
-            "\n",
-            "---\n",
-            "  0% 0/20 [00:00<?, ?it/s]\n",
-            "  5% 1/20 [00:00<00:04,  4.41it/s]\n",
-            " 15% 3/20 [00:00<00:02,  5.82it/s]\n",
-            " 20% 4/20 [00:00<00:02,  6.18it/s]\n",
-            " 25% 5/20 [00:00<00:02,  6.39it/s]\n",
-            " 30% 6/20 [00:00<00:02,  6.53it/s]\n",
-            " 35% 7/20 [00:01<00:01,  6.60it/s]\n",
-            " 40% 8/20 [00:01<00:01,  6.65it/s]\n",
-            " 45% 9/20 [00:01<00:01,  6.69it/s]\n",
-            " 50% 10/20 [00:01<00:01,  6.73it/s]\n",
-            " 55% 11/20 [00:01<00:01,  6.75it/s]\n",
-            " 60% 12/20 [00:01<00:01,  6.77it/s]\n",
-            " 65% 13/20 [00:02<00:01,  6.75it/s]\n",
-            " 70% 14/20 [00:02<00:00,  6.75it/s]\n",
-            " 75% 15/20 [00:02<00:00,  6.49it/s]\n",
-            " 80% 16/20 [00:02<00:00,  6.54it/s]\n",
-            " 85% 17/20 [00:02<00:00,  6.66it/s]\n",
-            " 90% 18/20 [00:02<00:00,  6.67it/s]\n",
-            " 95% 19/20 [00:02<00:00,  6.71it/s]\n",
-            "100% 20/20 [00:03<00:00,  6.52it/s]\n",
-            "\n",
-            "Total progress: 100% 20/20 [00:03<00:00,  5.76it/s]\n",
-            "2023-08-17 02:35:52,078 - ControlNet - \u001b[0;32mINFO\u001b[0m - Preview Resolution = 512\n",
-            "Interrupted with signal 2 in <frame at 0x5ca732c98fd0, file '/usr/lib/python3.10/threading.py', line 324, code wait>\n",
-            "\n",
-            "\n",
-            "\u001b[1;96mYou've been running this colab for 00:26:46\n",
-            "\n",
-            "\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
