--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -284,7 +284,7 @@
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
-        "    os.chdir(SDZ_webui_path)\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
         "\n",
         "# SDZ_Extensions\n",
         "  if SDZ_Extensions:\n",
@@ -418,7 +418,7 @@
         "    if not os.path.exists('ESRGAN'):\n",
         "        os.makedirs('ESRGAN')\n",
         "    %cd ESRGAN\n",
-        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_Upscalers.txt') if not os.path.exists('4x-UltraSharp.pth') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_Upscalers.txt').readlines()))]];\n",
+        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_Upscalers.txt') if not os.path.exists('4x_UniversalUpscalerV2-Sharper_103000_G.pth') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_Upscalers.txt').readlines()))]];\n",
         "\n",
         "# SDZ_Training\n",
         "  if SDZ_Training == \"New_Dreambooth - Kohya\":\n",
