--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -330,7 +330,7 @@
         "        #!gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
         "        #!gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
         "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
-        "        #!gdown https://acortar.link/7aJCkg -O agent-scheduler.zip && unzip -n agent-scheduler.zip && rm agent-scheduler.zip\n",
+        "        !gdown https://acortar.link/7aJCkg -O agent-scheduler.zip && unzip -n agent-scheduler.zip && rm agent-scheduler.zip\n",
         "        #!gdown https://acortar.link/glUPMq -O canvas-editor.zip && unzip -n canvas-editor.zip && rm canvas-editor.zip\n",
         "        #!gdown https://acortar.link/r5yoeb -O depthmap-script.zip && unzip -n depthmap-script.zip && rm depthmap-script.zip\n",
         "        #!gdown https://acortar.link/ESjkXf -O depthmap2mask.zip && unzip -n depthmap2mask.zip && rm depthmap2mask.zip\n",
